chores: update authentication service
